# asap-rs

./: Cargo.toml  readme.md
examples/: bench.rs  simple_smoothing.rs
src/: lib.rs
src/fft/: convolution.rs  mod.rs  transform.rs
src/smoothing/: adaptive_smoothing.rs  mod.rs  sma.rs
src/statistics/: metrics.rs
src/utils/: acf.rs  mod.rs
